<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/main_padding">
        <TextView
            style="@style/mainText"
            android:text="@string/default_question_txt"/>
        <TextView
            style="@style/questionNumber"
            android:text="1."/>
        <ImageView
            android:id="@+id/eg_flag_img"
            android:src="@drawable/ic_eg"
            style="@style/img_style"/>
        <RadioGroup
            android:id="@+id/options_radio_group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:text="@string/jo"
                style="@style/optionsRadioButtons"
                />
            <RadioButton
                android:text="@string/eg"
                style="@style/optionsRadioButtons"
                />
            <RadioButton
                android:text="@string/se"
                style="@style/optionsRadioButtons"
                />
        </RadioGroup>
        <TextView
            style="@style/questionNumber"
            android:text="2."/>
        <ImageView
            android:id="@+id/ar_flag_img"
            style="@style/img_style"
            android:src="@drawable/ic_ar"
            />
        <EditText
            android:id="@+id/ar_edit_text"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:hint="@string/what_country"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"/>
        <TextView
            style="@style/questionNumber"
            android:text="3."/>
        <ImageView
            android:id="@+id/se_flag_img"
            android:src="@drawable/ic_ca"
            style="@style/img_style"/>
        <RadioGroup
            android:id="@+id/options_radio_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:text="@string/dz"
                style="@style/optionsRadioButtons"
                />
            <RadioButton
                android:text="@string/au"
                style="@style/optionsRadioButtons"
                />
            <RadioButton
                android:text="@string/ca"
                style="@style/optionsRadioButtons"
                />
        </RadioGroup>
        <TextView
            style="@style/questionNumber"
            android:text="4."/>
        <ImageView
            android:id="@+id/nz_flag_img"
            android:src="@drawable/ic_nz"
            style="@style/img_style"/>
        <RadioGroup
            android:id="@+id/options_radio_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:text="@string/au"
                style="@style/optionsRadioButtons"
                />
            <RadioButton
                android:text="@string/nz"
                style="@style/optionsRadioButtons"
                />
            <RadioButton
                android:text="@string/ma"
                style="@style/optionsRadioButtons"
                />
        </RadioGroup>
        <TextView
            style="@style/questionNumber"
            android:text="5."/>
        <ImageView
            android:id="@+id/au_flag_img"
            style="@style/img_style"
            android:src="@drawable/ic_au"
            />
        <EditText
            android:id="@+id/au_edit_text"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:hint="@string/what_country"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"/>

        <TextView
            style="@style/questionNumber"
            android:text="6."/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainText"
            android:text="@string/cont_question1"/>
        <LinearLayout
            android:id="@+id/checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_all"
                style="@style/mainText"
                android:textColor="#777777"/>
            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/optionsRadioButtons"
                android:text="@string/eg"
                />
            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/optionsRadioButtons"
                android:text="@string/ma"
                />
            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/optionsRadioButtons"
                android:text="@string/ar"
                />
            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/optionsRadioButtons"
                android:text="@string/dz"
                />
        </LinearLayout>
        <Button
            android:id="@+id/submit_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/submit"
            android:textSize="@dimen/text_size"
            android:fontFamily="casual"
            android:layout_margin="@dimen/main_padding"/>
    </LinearLayout>
</ScrollView>